--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-<p>product-list works!</p>
+<div class="product-container" *ngFor="let product of productList">
+    <img class="product-index" src={{product.url}}>
+</div>
