--- a/src/app/component/product-list/product-list.component.css
+++ b/src/app/component/product-list/product-list.component.css
@@ -1,12 +1,15 @@
+/* */
 .product-index {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 1024px;
+    max-width: 200px;
     margin-bottom: 64px;
+    border-style: ridge;
   }
   
   .product-container {
     display: flex;
     justify-content: center;
   }
+  /* */
