--- a/src/app/component/product-item/product-item.component.html
+++ b/src/app/component/product-item/product-item.component.html
@@ -1,10 +1,13 @@
-<div >
+<div class="product-item">
     <div class="product-container">
-        <a [routerLink]="['productDetail', product.name]" (click)="setSelectedItem(product)"><img class="product-index" src={{product.url}}></a>
-        {{product.name}}
-        <br>
-        ${{product.price}}
-        <br>
+        <a [routerLink]="['productDetail', product.name]" (click)="setSelectedItem(product)"><img class="product-image" src={{product.url}}></a>
+        <div class="product-info">
+            {{product.name}}
+        </div>
+        <div class="product-info">
+            ${{product.price}}
+        </div>
+        
         <form (ngSubmit)="addToCart(product)">
             <select class="select-input" name="selectedQuantity" [(ngModel)]="selectedQuantity">
                 <option *ngFor="let quantity of quantityList" [ngValue]="quantity">{{quantity}}</option>
