--- a/src/app/component/product-list/product-list.component.css
+++ b/src/app/component/product-list/product-list.component.css
@@ -1,4 +1,3 @@
-/* */
 .product-index {
     display: flex;
     flex-wrap: wrap;
@@ -11,5 +10,6 @@
   .product-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+
   }
-  /* */
