--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -1,2 +1,4 @@
-<app-product-item *ngFor="let product of productList" [product]="product"></app-product-item>    
+<div class="product-container">
+    <app-product-item *ngFor="let product of productList" [product]="product"></app-product-item> 
+</div>   
 
