--- a/src/app/component/product-item-detail/product-item-detail.component.html
+++ b/src/app/component/product-item-detail/product-item-detail.component.html
@@ -1,22 +1,22 @@
 <div class="detail-container">
     <img class="img" src={{product.url}}>
     <div class="detail-item">
-        {{product.name}}
-        <br>
-        {{product.price}}
-        <br>
-        {{product.description}}
-        <br>
+        <div class="detail-space">
+            <div class="detail-title">{{product.name}}</div>
+            <div class="detail-space">${{product.price}}</div>
+            <div class="detail-space">{{product.description}}</div>
+        </div>
+        <form (ngSubmit)="addToCart(product)">
+            <select class="select-input" name="selectedQuantity" [(ngModel)]="selectedQuantity">
+                <option *ngFor="let quantity of quantityList" [ngValue]="quantity">{{quantity}}</option>
+            </select>
+            <br>
+            <button class="btn btn-primary" type="submit">
+                Add to Cart
+            </button>
+        </form>
+        <div class="back-link">
+            <a routerLink="/">Back to product list</a>
+        </div>
     </div>
-    <form (ngSubmit)="addToCart(product)">
-        <select class="select-input" name="selectedQuantity" [(ngModel)]="selectedQuantity">
-            <option *ngFor="let quantity of quantityList" [ngValue]="quantity">{{quantity}}</option>
-        </select>
-        <br>
-        <button class="btn btn-primary" type="submit">
-            Add to Cart
-        </button>
-    </form>
-    <br>
-    <a class="back-link" routerLink="/"> Back to product list </a>
 </div>
