--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,1 +1,38 @@
-<p>cart works!</p>
+<div class="cart-container">
+    <div class="cart-item-details" *ngFor="let cart of cartList | keyvalue">
+        <img class="img" src={{cart.value.productInfo.url}}>
+        <div class="cart-item">
+            <strong>{{cart.value.productInfo.name}}</strong>
+        </div>
+        <div class="cart-item">
+            ${{cart.value.productInfo.price}}
+        </div>
+        <form class="cart-item">
+            Amount: <input class="number-input" type="text" value="{{cart.value.amount}}" (input)="updateTotal($event, cart.value.productInfo.id)">
+        </form>
+    </div>
+</div>
+
+<div class="empty-cart-message" *ngIf="isCartListEmpty()"><h1>No items in the cart</h1></div>
+
+
+<div class="cart-container">
+    <h2>Total: ${{totalPrice}}</h2>
+</div>
+
+ 
+<div class="cart-container" *ngIf="!isCartListEmpty()">
+    <form (ngSubmit)="purchase()">
+        <label class="form-margin">Full name</label><br>
+        <input class="form-margin" type="text" name="fullName" [(ngModel)]="fullName" placeholder="(minimum 3 characters)"><br>
+        <label class="form-margin">Address</label><br>
+        <input class="form-margin" type="text" name="address" [(ngModel)]="address" placeholder="(minimum 6 characters)"><br>
+        <label class="form-margin">Credit card number</label><br>
+        <input class="form-margin" type="text" name="creditCardNumber" [(ngModel)]="creditCardNumber" placeholder="(16-digit-number)"
+            onkeypress="return (event.charCode !=8 && event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))"><br>
+        <p class="form-margin">We'll never share your payment details with anyone else</p><br>
+        <button class="btn btn-primary" type="submit">
+            Submit
+        </button>
+    </form>
+</div>
