--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -22,16 +22,16 @@
 
  
 <div class="cart-container" *ngIf="!isCartListEmpty()">
-    <form (ngSubmit)="purchase()">
+    <form #form="ngForm" (ngSubmit)="purchase()">
         <label class="form-margin">Full name</label><br>
-        <input class="form-margin" type="text" name="fullName" [(ngModel)]="fullName" placeholder="(minimum 3 characters)"><br>
+        <input class="form-margin" required minlength="3" type="text" name="fullName" [(ngModel)]="fullName" placeholder="(minimum 3 characters)"><br>
         <label class="form-margin">Address</label><br>
-        <input class="form-margin" type="text" name="address" [(ngModel)]="address" placeholder="(minimum 6 characters)"><br>
+        <input class="form-margin" required minlength="6" type="text" name="address" [(ngModel)]="address" placeholder="(minimum 6 characters)"><br>
         <label class="form-margin">Credit card number</label><br>
-        <input class="form-margin" type="text" name="creditCardNumber" [(ngModel)]="creditCardNumber" placeholder="(16-digit-number)"
+        <input class="form-margin" required minlength="16" maxlength="16" type="text" name="creditCardNumber" [(ngModel)]="creditCardNumber" placeholder="(16-digit-number)"
             onkeypress="return (event.charCode !=8 && event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))"><br>
         <p class="form-margin">We'll never share your payment details with anyone else</p><br>
-        <button class="btn btn-primary" type="submit">
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">
             Submit
         </button>
     </form>
