Update confirmation component

--- a/src/app/component/confirmation/confirmation.component.html
+++ b/src/app/component/confirmation/confirmation.component.html
@@ -1,1 +1,12 @@
-<p>confirmation works!</p>
+<div class="confirmation-items">
+    <h1 class="confirmation-header">Success!</h1>
+    <br>
+    <p>Thank you, <strong>{{fullname}}!</strong> </p>
+    <br>
+    <p>Your <strong>${{total}}</strong> order is confirmed!</p>
+    <br>
+    <p>Please allow 1-3 bussiness day(s) for shipping.</p>
+    <button class="btn btn-primary margin-button" (click)="backToProductList()">
+        Back to product list
+    </button>
+</div>
