--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -8,7 +8,7 @@
             ${{cart.value.productInfo.price}}
         </div>
         <form class="cart-item">
-            Amount: <input class="number-input" type="text" value="{{cart.value.amount}}" (input)="updateTotal($event, cart.value.productInfo.id)">
+            Amount: <input class="number-input" type="number" value="{{cart.value.amount}}" (input)="updateTotal($event, cart.value.productInfo.id)">
         </form>
     </div>
 </div>
