Add remove item button on cart component

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -10,6 +10,9 @@
         <form class="cart-item">
             Amount: <input class="number-input" type="number" value="{{cart.value.amount}}" (input)="updateTotal($event, cart.value.productInfo.id)">
         </form>
+        <button class="btn btn-primary" (click)="removeItem(cart.value.productInfo.id)">
+            Remove
+        </button>
     </div>
 </div>
 
