--- a/src/app/component/confirmation/confirmation.component.html
+++ b/src/app/component/confirmation/confirmation.component.html
@@ -1,5 +1,5 @@
 <div class="confirmation-items">
-    <h1 class="confirmation-header">Success!</h1>
+    <h1 class="confirmation-header">Success! <i class="fa fa-check-square-o" aria-hidden="true"></i></h1>
     <br>
     <p>Thank you, <strong>{{fullname}}!</strong> </p>
     <br>
