--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
 <h1>My Store</h1>
-<a routerLink="/">Product List</a>
+<a routerLink="/"><i class="fa fa-shopping-bag" aria-hidden="true"></i> Product List</a>
 |
-<a routerLink="/cart">Cart</a>
+<a routerLink="/cart"><i class="fa fa-shopping-cart"></i> Cart</a>
 </div>
 
