Implement output directive

--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -1,4 +1,4 @@
 <div class="product-container">
-    <app-product-item *ngFor="let product of productList" [product]="product"></app-product-item> 
+    <app-product-item *ngFor="let product of productList" [product]="product" (addedProduct)="addToCart($event)"></app-product-item> 
 </div>   
 
