Implement PrimeNg-Toaster

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -39,3 +39,7 @@
         </button>
     </form>
 </div>
+
+<p-toast key="notif" position="top-right"></p-toast>
+
+<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
