--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -2,3 +2,4 @@
     <app-product-item *ngFor="let product of productList" [product]="product" (addedProduct)="addToCart($event)"></app-product-item> 
 </div>   
 
+<p-toast key="notif" position="top-right"></p-toast>
